<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="ST_ComponentBase_HMI" Id="{79d370b9-dfb4-4fcc-b649-2f82e0661b70}">
    <Declaration><![CDATA[TYPE ST_ComponentBase_HMI :
STRUCT
	//Status information
	bEnabled	: BOOL;
	bSimulate 	: BOOL;
	sName		: STRING;
	bActive		: BOOL;
	bError		: BOOL;
	nErrorID	: UDINT;
	
	//Control information
	bHMIControlAvailable	: BOOL;		//Set TRUE *FROM PLC* when HMI requests can be processed
	bIncomingHMIRequest 	: BOOL;		//Pulses TRUE when an HMI request is issued
	bHMICommandConfirmation	: BOOL;		//Confirms receipt and subsequent processing of the command sent by the HMI
	
	bEnableHMIRequest				: BOOL;		//HMI requests to enable the component
	bDisableHMIRequest 				: BOOL;		//HMI requests to disable the component
	bSimulateOperationHMIRequest 	: BOOL;		//HMI requests to change the component to simulation mode
	bStandardOperationHMIRequest	: BOOL;		//HMI requests to change the component to standard mode
	bResetHMIRequest				: BOOL;		//HMI requests to reset the component
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>